--- a/slides/index.html
+++ b/slides/index.html
@@ -42,8 +42,8 @@
 
 				<section class="center" data-background="images/background.png" data-background-opacity="0.2">
 					<section id="title-slide" class="center">
-						<h2>Presentation Title</h2>
-						<p>Your Name / @twitter / alleyinteractive.com</p>
+						<h2>Making your website talk</h2>
+						<p>Pattie Reaves / @pazzypunk / alley.co</p>
 					</section>
 
 					<section class="center">
@@ -57,47 +57,20 @@
 					</section>
 				</section>
 
-				<section data-markdown="example.md">
-				</section>
-
-				<section>
-					<h2>Basic Slide</h2>
-					<p>Slide content</p>
-				</section>
-
-				<section class="center">
-					<h2>Vertically Centered Slide</h2>
-					<p>Slide content</p>
-				</section>
-
-				<section>
-					<h2>Fragments</h2>
-					<ul>
-						<li class="fragment">Any element can get</li>
-						<li class="fragment">the fragment class</li>
-						<li class="fragment">and they show in sequence</li>
-					</ul>
-				</section>
-
-				<section>
-					<h2>Slide with code</h2>
-					<pre><code data-trim contenteditable class="php">
-echo 'This slide has code';
-// and it's even editable
-					</code></pre>
+				<section data-markdown="wcphx-outline.md">
 				</section>
 
 				<section class="center">
 					<h2>The End</h2>
 
 					<p><br />Want to become a better developer?<br />We're hiring.</p>
-					<p>info@alleyinteractive.com</p>
+					<p>info@alley.co</p>
 				</section>
 
 			</div>
 
 			<img src="images/logo.png" alt="Alley Interactive" id="logo" />
-			<div id="hashtag">#hashtag</div>
+			<div id="hashtag">#wcphx</div>
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
